# result

./: CMakeLists.txt  Makefile  README.md  example.cpp  flake.nix  meson.build  result.h
examples/: and_then.cpp  arithmetic.cpp  complex_data.cpp  error_codes.cpp  file_operation.cpp  or_else.cpp  transform.cpp
